# cugraphopt

./: .gitignore  CMakeLists.txt  README.md
docs/superpowers/specs/: 2026-04-08-cugraphopt-build-skeleton-design.md  2026-04-08-cugraphopt-pose-graph-parser-design.md
include/cugraphopt/: bsr.hpp  core.hpp  cuda_solver.cuh  cuda_solver.hpp  graph_color.hpp  linearization.hpp  pose_graph.hpp  se3.hpp  se3_device.cuh  solver.hpp  version.hpp
src/: bsr.cpp  core.cpp  core.cu  cuda_solver.cu  cudss_solver.cu  graph_color.cpp  linearization.cpp  main.cpp  pose_graph.cpp  se3.cpp  solver.cpp
tests/: assembly_bench.cu  bsr_test.cpp  fused_assembly_test.cu  graph_color_test.cpp  linearization_test.cpp  parser_test.cpp  se3_device_test.cu  se3_test.cpp  smoke_test.cpp  solver_test.cpp  spmv_bench.cu
tests/fixtures/: sample_pose_graph.g2o
tools/: gen_g2o.py  gtsam_bench.py
